Fix accessible exceptions in emoji4j