@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-java -jar build/libs/phone-formatter-0.1-all.jar
+java --add-opens java.base/java.lang=ALL-UNNAMED -jar build/libs/phone-formatter-0.1-all.jar
 for file in hs_err_pid*.log; do
   if [ -f "$file" ]; then
     cat hs_err_pid*.log
